# CS_ros2model_TBs

./: README.md
CS_BasicObjects/: .project
CS_BasicObjects/msgs/: as2_external_object_to_tf.ros  as2_msgs.ros  cascade_lifecycle_msgs.ros  control_msgs.ros  dialogflow_ros2_interfaces.ros  dwb_msgs.ros  follow_ros_msgs.ros  geographic_msgs.ros  lifecycle_msgs.ros  plansys2_msgs.ros  slam_toolbox.ros  sound_play.ros  tf2_msgs.ros  unique_identifier_msgs.ros  waypoint_navigation_msgs.ros  yolov8_msgs.ros
CS_Drone-Inspection/: .project  representations.aird  system.rossystem
CS_Drone-Inspection/rosnodes/: FollowPathBehavior.ros  GoToWaypointBehavior.ros  LandBehavior.ros  TakeOffBehavior.ros  adapter.ros  alphanumeric_viewer.ros  as2_external_object_to_tf.ros  controller_manager.ros  dummy_gcs.ros  platform.ros  state_estimator.ros
CS_Merlin2-carrymyluggage/: .project  representations.aird  system.rossystem
CS_Merlin2-carrymyluggage/diagram/: SystemComponents
CS_Merlin2-carrymyluggage/msgs/: bond.ros  builtin_interfaces.ros  dialogflow_ros2_interfaces.ros  generate_messages_model_helper.sh  merlin2_msgs.ros  nav2_msgs.ros  nav_2d_msgs.ros  octomap_msgs.ros  rlc_interfaces.ros  vision_msgs.ros  visualization_msgs.ros  yasmin_msgs.ros  yolov8_msgs.ros
CS_Merlin2-carrymyluggage/rosnodes/: CS_Merlin2-carrymyluggage.ros  behavior_server.ros  bt_navigator.ros  bt_navigator_navigate_through_poses_rclcpp_node.ros  bt_navigator_navigate_to_pose_rclcpp_node.ros  carry_bag.ros  controller_server.ros  detect_person.ros  dialogflow_client.ros  executor_node.ros  follow_node.ros  (+27 more)
CS_PlanSys-recepcionist/: .project  representations.aird
eu.coresense.testbeds/: .project
eu.coresense.testbeds/src-gen/manufacturing_tb/: CMakeLists.txt  README.md  package.xml  setup.py
eu.coresense.testbeds/src-gen/manufacturing_tb/config/: gazebo.yaml  gazebo_sensor_B4_controller.yaml  joint_state_publisher_gui.yaml  robot_state_publisher.yaml  static_transform_publisher_BB3LgctvQJmC8ZBZ.yaml  static_transform_publisher_vS7Rn4YQfVmDReBi.yaml
eu.coresense.testbeds/src-gen/manufacturing_tb/launch/: manufacturing_tb.launch.py
eu.coresense.testbeds/src-gen/manufacturing_tb/resource/: manufacturing_tb.puml
(+79 files in other folders)
