<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>manufacturing_tb</name>
 <version>0.0.1</version>
 <description>This package provides launch file for operating manufacturing_tb</description>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>nav2_bt_navigator</exec_depend>
    <exec_depend>topic_tools</exec_depend>
    <exec_depend>gazebo</exec_depend>
    <exec_depend>gazebo_sensor_b1_controller</exec_depend>
    <exec_depend>gazebo_sensor_b4_controller</exec_depend>
    <exec_depend>planar_move</exec_depend>
    <exec_depend>gazebo_ros_joint_state_publisher</exec_depend>
    <exec_depend>ira_laser_tools</exec_depend>
    <exec_depend>transform_listener_impl</exec_depend>
    <exec_depend>nav2_map_server</exec_depend>
    <exec_depend>nav2_amcl</exec_depend>
    <exec_depend>nav2_controller</exec_depend>
    <exec_depend>nav2_planner</exec_depend>
    <exec_depend>nav2_behaviors</exec_depend>
    <exec_depend>bt_navigator_navigate_to_pose</exec_depend>
    <exec_depend>bt_navigator_navigate_through_poses</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>static_transform_publisher</exec_depend>
    <exec_depend>global_costmap</exec_depend>
    <exec_depend>local_costmap</exec_depend>
    <exec_depend>nav2_lifecycle_manager</exec_depend>
  <!--test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>python3-pytest</test_depend-->

  <export>
  	<build_type>ament_python</build_type>
  </export>
</package>
